# cricket

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
assets/: config.json
assets/records/: raven.251202.104855.json  raven.251202.125905.json
src/: train.py
src/clipclass/: main.cpp
src/clipgen/: main.cpp
src/common/: Wav.cpp  Wav.hpp  config.cpp  config.hpp  gather.cpp  gather.hpp  json.hpp
